--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   english_words: ^4.0.0
-  http: 0.13.3
   http_interceptor: ^0.4.0
+  flutter_bloc: ^7.0.0
+  animations: ^1.1.2
 
 
 dev_dependencies:
@@ -50,8 +51,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - halal.png
-    - no-image.jpg
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
